updated with ontology link

--- a/index.html
+++ b/index.html
@@ -2,5 +2,9 @@
 <head><title>Test</title></head>
 <body>
 It works!!!!!
+<p>Link to dynamic visualisation 
+  <a href="http://visualdataweb.de/webvowl/#iri=https://raw.githubusercontent.com/ProjectDebbie/Ontology_DEB/20191001/DEB_20191001.owl">Ontology view
+  </a>
+</p>
 </body>
 </html>
