--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<head><title>Test</title></head>
+<head><title>DEBBIE</title></head>
 <body>
 It works!!!!!
 <p>Link to dynamic visualisation 
