--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head><title>DEBBIE</title></head>
 <body>
 It works!!!!!
+DEBBIE is an open access database of biocompatibility information.
 <p>Link to dynamic visualisation 
   <a href="http://visualdataweb.de/webvowl/#iri=https://raw.githubusercontent.com/ProjectDebbie/Ontology_DEB/20191001/DEB_20191001.owl">Ontology view
   </a>
