--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@ DEBBIE is an open access database of biocompatibility information.
   <a href="http://visualdataweb.de/webvowl/#iri=https://raw.githubusercontent.com/ProjectDebbie/Ontology_DEB/20191001/DEB_20191001.owl">Ontology view
   </a>
 </p>
+<p>Link to another dynamic visualisation 
+  <a href="http://owlgred.lumii.lv/online_visualization/7l16">Ontology view 2
+  </a>
+</p>
 </body>
 </html>
