--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <head><title>DEBBIE</title></head>
 <body>
 DEBBIE is an open access database of biocompatibility information.
-<p>Link to dynamic visualisation 
+<p>Links to dynamic visualisations 
   <a href="http://visualdataweb.de/webvowl/#iri=https://raw.githubusercontent.com/ProjectDebbie/Ontology_DEB/20191001/DEB_20191001.owl">Ontology view
   </a>
-</p>
-<p>Link to another dynamic visualisation 
   <a href="http://owlgred.lumii.lv/online_visualization/7l16">Ontology view 2
   </a>
 </p>
