--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <head><title>DEBBIE</title></head>
 <body>
 DEBBIE is an open access database of biocompatibility information.
-<p>Links to dynamic visualisations 
+<p>Link to dynamic visualisation by webvowl: 
   <a href="http://visualdataweb.de/webvowl/#iri=https://raw.githubusercontent.com/ProjectDebbie/Ontology_DEB/20191001/DEB_20191001.owl">Ontology view
   </a>
+</p>
+<p>Link to static visualisation by owlgred:
   <a href="http://owlgred.lumii.lv/online_visualization/7l16">Ontology view 2
   </a>
 </p>
