--- a/index.html
+++ b/index.html
@@ -1,14 +1,140 @@
-<html>
-<head><title>DEBBIE</title></head>
-<body>
-DEBBIE is an open access database of biocompatibility information.
-<p>Link to dynamic visualisation by webvowl: 
-  <a href="http://visualdataweb.de/webvowl/#iri=https://raw.githubusercontent.com/ProjectDebbie/Ontology_DEB/20191001/DEB_20191001.owl">Ontology view
-  </a>
-</p>
-<p>Link to static visualisation by owlgred:
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <title>DEBBIE Project</title>
+  </head>
+  <body>
+  
+  <!-- Navigation Bar construction, can add dropdown options, search bar -->
+<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
+
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span> 
+      </button>
+      <a class="navbar-brand" href="#">DEBBIE</a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#about">About</a></li>
+        <li><a href="#database">Database</a></li>
+        <li><a href="#ontology">Ontology</a></li>
+        <li><a href="#about">Research</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+
+<!-- News jumbotron -->
+<div class="jumbotron">
+    <div class="container">
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br> <br><br><br> <!--keep filling br until the height is to your liking-->
+    </div>
+</div>
+<style>
+.jumbotron {
+  background: url("/Users/austinmckitrick/eclipse-workspace/DEBBIE_web/assets/DEBBIE.png") no-repeat center;
+  -webkit-background-size: 100% 100%;
+  -moz-background-size: 100% 100%;
+  -o-background-size: 100% 100%;
+  background-size: 100% 100%;
+}
+</style>
+</div>
+
+
+<div id="about" class="container-fluid bg-grey text-center">
+	<h2>About the project:</h2>
+  <br>
+  <br>
+	<div class="container-fluid bg-grey">
+		<p class="font-weight-normal">DEBBIE is a project to automatically curate biocompatibility data from 
+      	the biomedical literature into a FAIR, open-access database for the research community.</p>
+    </div>
+
+</div>
+
+<div id="database"class="container-fluid">
+<br>
+<br>
+	<h2>DEBBIE Database</h2>
+  <p>Search below for information on drugs.</p>
+ <br>
+
+<br>
+</div>
+
+<div id="ontology"class="container-fluid">
+<br>
+<br>
+	<h2>Ontology</h2>
+  <p>Link to static visualisation by owlgred:
   <a href="http://owlgred.lumii.lv/online_visualization/7l16">Ontology view 2
   </a>
 </p>
-</body>
+
+	<p>Link to dynamic visualisation by webvowl: 
+  <a href="http://visualdataweb.de/webvowl/#iri=https://raw.githubusercontent.com/ProjectDebbie/Ontology_DEB/20191001/DEB_20191001.owl">Ontology view
+  </a>
+</p>
+ <br>
+<br>
+<br>
+</div>
+
+
+
+
+
+
+
+
+  <!-- Grid row -->
+  <div class="row">
+
+    <!-- Grid column -->
+    <div class="col-md-4 offset-md-1 mx-3 my-3">
+
+    <!-- Grid column -->
+
+    <!-- Grid column -->
+    <div class="col-md-7 text-md-left ml-3 mt-3">
+
+      <!-- Excerpt -->
+ 
+
+    </div>
+    <!-- Grid column -->
+
+  </div>
+  <!-- Grid row -->
+  
+
+
+
+
+
+
+
+
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  </body>
 </html>
+
+
