--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </div>
 <style>
 .jumbotron {
-  background: url("/Users/austinmckitrick/eclipse-workspace/DEBBIE_web/assets/DEBBIE.png") no-repeat center;
+  background: url("ProjectDebbie.github.io/DEBBIE.png") no-repeat center;
   -webkit-background-size: 100% 100%;
   -moz-background-size: 100% 100%;
   -o-background-size: 100% 100%;
