adding DEBBIE image

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <!-- News jumbotron -->
 <div class="jumbotron">
     <div class="container">
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br> <br><br><br> <!--keep filling br until the height is to your liking-->
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br> <!--keep filling br until the height is to your liking-->
     </div>
 </div>
 <style>
