--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
   -moz-background-size: 100% 100%;
   -o-background-size: 100% 100%;
   background-size: 100% 100%;
+  margin-left:30px;
+  margin-right:30px;
 }
 </style>
 </div>
