--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
   -moz-background-size: 100% 100%;
   -o-background-size: 100% 100%;
   background-size: 100% 100%;
+  padding:50px 0 40px 0;
   margin-left:30px;
   margin-right:30px;
 }
