--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   -moz-background-size: 100% 100%;
   -o-background-size: 100% 100%;
   background-size: 100% 100%;
-  padding:150px 0 120px 0;
+  padding:50px 0 40px 0;
   margin-left:30px;
   margin-right:30px;
 }
@@ -68,17 +68,17 @@
 
 </div>
 
-<div id="database"class="container-fluid">
+<div id="database"class="container-fluid bg-grey text-center">
 <br>
 <br>
 	<h2>DEBBIE Database</h2>
-  <p>Search below for information on drugs.</p>
+  <p>Search below for information on biomaterials.</p>
  <br>
 
 <br>
 </div>
 
-<div id="ontology"class="container-fluid">
+<div id="ontology"class="container-fluid bg-grey text-center">
 <br>
 <br>
 	<h2>Ontology</h2>
