--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   background: url("DEBBIE4.png") no-repeat center;
   -webkit-background-size: 100% 100%;
   -moz-background-size: 100% 100%;
-  -o-background-size: 100% 100%;
+  -o-background-size: auto auto;
   background-size: auto auto;
   padding:50px 0 40px 0;
   margin-left:30px;
