--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
   background: url("DEBBIE4.png") no-repeat center;
   -webkit-background-size: 100% 100%;
   -moz-background-size: 100% 100%;
-  -o-background-size: auto auto;
+  -o-background-size: 100% 100%;
   background-size: auto auto;
-  padding:50px 0 40px 0;
+  padding:100px 0 80px 0;
   margin-left:30px;
   margin-right:30px;
 }
