--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
   -webkit-background-size: 100% 100%;
   -moz-background-size: 100% 100%;
   -o-background-size: 100% 100%;
-  background-size: auto auto;
-  padding:100px 0 80px 0;
+  background-size: 100% auto;
+  padding:50px 0 40px 0;
   margin-left:30px;
   margin-right:30px;
 }
