--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   -webkit-background-size: 100% 100%;
   -moz-background-size: 100% 100%;
   -o-background-size: 100% 100%;
-  background-size: auto 100%;
+  background-size: 100% auto;
   padding:50px 0 40px 0;
   margin-left:30px;
   margin-right:30px;
