--- a/index.html
+++ b/index.html
@@ -1,143 +1,139 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    <title>DEBBIE Project</title>
-  </head>
-  <body>
-  
-  <!-- Navigation Bar construction, can add dropdown options, search bar -->
-<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
+<!DOCTYPE html>
+<html>
+<title>DEBBIE Project</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<body>
 
-<nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span> 
-      </button>
-      <a class="navbar-brand" href="#">DEBBIE</a>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#about">About</a></li>
-        <li><a href="#database">Database</a></li>
-        <li><a href="#ontology">Ontology</a></li>
-        <li><a href="#about">Research</a></li>
-      </ul>
+<!-- Navbar (sit on top) -->
+<div class="w3-top">
+  <div class="w3-bar w3-white w3-wide w3-padding w3-card">
+    <a href="#home" class="w3-bar-item w3-button"><b>DEBBIE</b></a>
+    <!-- Float links to the right. Hide them on small screens -->
+    <div class="w3-right w3-hide-small">
+      <a href="#about" class="w3-bar-item w3-button">About</a>
+      <a href="#database" class="w3-bar-item w3-button">Database</a>
+      <a href="#ontology" class="w3-bar-item w3-button">Ontology</a>
+      <a href="#research" class="w3-bar-item w3-button">Research</a>
+      <a href="#team" class="w3-bar-item w3-button">Team</a>
     </div>
   </div>
-</nav>
-
-
-<!-- News jumbotron -->
-<div class="jumbotron">
-    <div class="container">
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br> <!--keep filling br until the height is to your liking-->
-    </div>
-</div>
-<style>
-.jumbotron {
-  background: url("DEBBIE4.png") no-repeat center;
-  -webkit-background-size: 100% 100%;
-  -moz-background-size: 100% 100%;
-  -o-background-size: 100% 100%;
-  background-size: 100% auto;
-  padding:50px 0 40px 0;
-  margin-left:30px;
-  margin-right:30px;
-}
-</style>
 </div>
 
+<!-- Header -->
+<header class="w3-display-container w3-content w3-wide w3-center" style="max-width:1300px;" id="home">
+  <img class="w3-image w3-center" src="DEBBIE4.png" alt="Debbie_img" width="1200" height="100">
+</header>
 
-<div id="about" class="container-fluid bg-grey text-center">
-	<h2>About the project:</h2>
-  <br>
-  <br>
-	<div class="container-fluid bg-grey">
-		<p class="font-weight-normal">DEBBIE is a project to automatically curate biocompatibility data from 
-      	the biomedical literature into a FAIR, open-access database for the research community.</p>
-    </div>
+<!-- Page content max-width:1564px -->
+<div class="w3-content w3-padding" style="max-width:1300px">
 
-</div>
-
-<div id="database"class="container-fluid bg-grey text-center">
-<br>
-<br>
-	<h2>DEBBIE Database</h2>
-  <p>Search below for information on biomaterials.</p>
- <br>
-
-<br>
-</div>
-
-<div id="ontology"class="container-fluid bg-grey text-center">
-<br>
-<br>
-	<h2>Ontology</h2>
-  <p>Link to static visualisation by owlgred:
-  <a href="http://owlgred.lumii.lv/online_visualization/7l16">Ontology view 2
-  </a>
-</p>
-
-	<p>Link to dynamic visualisation by webvowl: 
-  <a href="http://visualdataweb.de/webvowl/#iri=https://raw.githubusercontent.com/ProjectDebbie/Ontology_DEB/20191001/DEB_20191001.owl">Ontology view
-  </a>
-</p>
- <br>
-<br>
-<br>
-</div>
-
-
-
-
-
-
-
-
-  <!-- Grid row -->
-  <div class="row">
-
-    <!-- Grid column -->
-    <div class="col-md-4 offset-md-1 mx-3 my-3">
-
-    <!-- Grid column -->
-
-    <!-- Grid column -->
-    <div class="col-md-7 text-md-left ml-3 mt-3">
-
-      <!-- Excerpt -->
- 
-
-    </div>
-    <!-- Grid column -->
-
+  <!-- About Section -->
+  <div class="w3-container w3-padding-32 w3-light-grey" id="about">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
+    <p>The Database of Experimental Biomaterials and their Biological Effect
+        (DEBBIE) is a new open access tool which will enable a more efficient
+        and evidence-based selection of materials for medical applications. The
+        database aims to curate exhaustive inventories of biomaterials and their
+        associated data using text mining tools. It can be used to recreate or
+        update reviews of the literature in a more rapid and repeatable manner
+        as well as generate a comprehensive map of research activity and findings.
+    </p>
+    <br>
+    <center><img class="w3-image w3-center w3-padding-16" src="project_pipeline.png" alt="Pipeline" width="900" height="300"></center>
   </div>
-  <!-- Grid row -->
-  
+
+    <!-- Database Section -->
+  <div class="w3-container w3-padding-32" id="database">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Database</h3>
+    <p>The Database of Experimental Biomaterials and their Biological Effect
+        (DEBBIE) is a new open access tool which will enable a more efficient
+        and evidence-based selection of materials for medical applications. The
+        database aims to curate exhaustive inventories of biomaterials and their
+        associated data using text mining tools. It can be used to recreate or
+        update reviews of the literature in a more rapid and repeatable manner
+        as well as generate a comprehensive map of research activity and findings.
+    </p>
+    <center><p><button class="w3-button w3-blue">DEBBIE Database</button></p></center>
+  </div>
+
+  <!-- Ontology Section -->
+  <div class="w3-container w3-padding-32 w3-light-grey" id="ontology">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Ontology</h3>
+    <p> <a href="https://bioportal.bioontology.org/ontologies/DEB">The Devices, Experimental scaffolds and Biomaterials Ontology (DEB)</a> was
+    developed to facilitate information curation in the area of medical
+    devices, experimental scaffolds and biomaterials. The ontology was
+    designed to complement existing medical vocabularies, with emphasis on
+    material processing, structures and features associated with
+    biomaterials and experimental scaffolds. It was developed using text
+    mining tool and a systematic approach.
+        <br>
+        <br>
+        <p>In addition, below you can find the static and dynamic visualization of the ontology.</p>
+        <br>
+        <div class="w3-row-padding">
+          <div class="w3-col l6 m6 w3-margin-bottom">
+            <div class="w3-display-container">
+              <img src="dynamic_visual.png" alt="House" style="width:100%">
+              <center><p>Static Visualization on <a href="http://owlgred.lumii.lv/online_visualization/7l16">OWLGrEd</a></p></center>
+            </div>
+          </div>
+          <div class="w3-col l6 m6 w3-margin-bottom">
+            <div class="w3-display-container">
+              <img src="dynamic_visual.png" alt="House" style="width:100%">
+              <center><p>Dynamic Visualization on <a href="http://visualdataweb.de/webvowl/#iri=https://raw.githubusercontent.com/ProjectDebbie/Ontology_DEB/20191001/DEB_20191001.owl">WebVOWL</a></p></center>
+            </div>
+          </div>
+        </div>
+    </p>
+  </div>
+
+<!-- Team Section -->
+  <div class="w3-container w3-padding-32" id="team">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Team</h3>
+  <div class="w3-row-padding w3-grayscale">
+    <div class="w3-col l3 m3 w3-margin-bottom">
+      <img src="osnat_hakimi.jpg" alt="Osnat" style="width:100%">
+      <h3>Osnat Hakimi</h3>
+      <p class="w3-opacity">Principal Investigator</p>
+      <p>blurb.</p>
+      <p><button class="w3-button w3-blue w3-block">Contact</button></p>
+    </div>
+    <div class="w3-col l3 m3 w3-margin-bottom">
+      <img src="austin.jpg" alt="austin" style="width:100%">
+      <h3>Austin McKitrick</h3>
+      <p class="w3-opacity">Research Assistant</p>
+      <p>blurb</p>
+      <p><button class="w3-button w3-blue w3-block">Contact</button></p>
+    </div>
+    <div class="w3-col l3 m3 w3-margin-bottom">
+      <img src="osnat_hakimi.jpg" alt="carla" style="width:100%">
+      <h3>Carla</h3>
+      <p class="w3-opacity">Collaborator</p>
+      <p>blurb</p>
+      <p><button class="w3-button w3-blue w3-block">Contact</button></p>
+    </div>
+    <div class="w3-col l3 m3 w3-margin-bottom">
+      <img src="javi.jpeg" alt="javi" style="width:100%">
+      <h3>Javier Corvi</h3>
+      <p class="w3-opacity">Collaborator</p>
+      <p>blurb</p>
+      <p><button class="w3-button w3-blue w3-block">Contact</button></p>
+    </div>
+  </div>
+</div>
 
 
+<!-- End page content -->
+</div>
 
 
+<!-- Footer -->
+<footer class="w3-center w3-black w3-padding-16">
 
+</footer>
 
-
-
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+</body>
 </html>
-
 
