--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <img src="austin.jpg" alt="austin" style="width:100%">
       <h3>Austin McKitrick</h3>
       <p class="w3-opacity">Research Assistant</p>
-      <p>Austin is a Masters Student at Universitat Pompeu Fabra (UPF) in Barcelona.</p>
+      <p>Austin is a Masters Student in Bioinformatics for Health Sciences at Universitat Pompeu Fabra (UPF) in Barcelona.</p>
       <p><button class="w3-button w3-blue w3-block">Contact</button></p>
     </div>
     <div class="w3-col l3 m3 w3-margin-bottom">
