--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
     <div class="w3-col l3 m3 w3-margin-bottom">
       <img src="osnat_hakimi.jpg" alt="Osnat" style="width:100%">
       <h3>Osnat Hakimi</h3>
-      <p class="w3-opacity">Principal Investigator</p>
-      <p>blurb.</p>
+      <p class="w3-opacity">Project Leader</p>
+      <p>Osnat is a Marie Curie Individual Fellow at the Universitat Politècnica de Catalunya and a visitor to the Barcelona super computing Centre</p>
       <p><button class="w3-button w3-blue w3-block">Contact</button></p>
     </div>
     <div class="w3-col l3 m3 w3-margin-bottom">
@@ -108,7 +108,7 @@
       <p><button class="w3-button w3-blue w3-block">Contact</button></p>
     </div>
     <div class="w3-col l3 m3 w3-margin-bottom">
-      <img src="osnat_hakimi.jpg" alt="carla" style="width:100%">
+      <img src="C Fuenteslopez (1).jpg" alt="carla" style="width:100%">
       <h3>Carla</h3>
       <p class="w3-opacity">Collaborator</p>
       <p>blurb</p>
