--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide w3-center" style="max-width:1300px;" id="home">
-  <img class="w3-image w3-center" src="DEBBIE4.png" alt="Debbie_img" width="1200" height="100">
+  <img class="w3-image w3-center" src="DEBBIE4.png" alt="Debbie_img" width="1300" height="108">
 </header>
 
 <!-- Page content max-width:1564px -->
@@ -75,13 +75,13 @@
         <div class="w3-row-padding">
           <div class="w3-col l6 m6 w3-margin-bottom">
             <div class="w3-display-container">
-              <img src="dynamic_visual.png" alt="House" style="width:100%">
+              <img src="static_ontology.png" alt="House" style="width:200">
               <center><p>Static Visualization on <a href="http://owlgred.lumii.lv/online_visualization/7l16">OWLGrEd</a></p></center>
             </div>
           </div>
           <div class="w3-col l6 m6 w3-margin-bottom">
             <div class="w3-display-container">
-              <img src="dynamic_visual.png" alt="House" style="width:100%">
+              <img src="dynamic_visual.png" alt="House" style="width:200">
               <center><p>Dynamic Visualization on <a href="http://visualdataweb.de/webvowl/#iri=https://raw.githubusercontent.com/ProjectDebbie/Ontology_DEB/20191001/DEB_20191001.owl">WebVOWL</a></p></center>
             </div>
           </div>
