--- a/index.html
+++ b/index.html
@@ -22,16 +22,18 @@
 </div>
 
 <!-- Header -->
-<header class="w3-display-container w3-content w3-wide w3-center" style="max-width:1300px;" id="home">
-  <img class="w3-image w3-center" src="DEBBIE4.png" alt="Debbie_img" width="1300" height="108">
+<br>
+<br>
+<header class="w3-display-container w3-content w3-wide w3-center" style="max-width:1250px;" id="home">
+  <img class="w3-image w3-center" src="debbie_small.png" alt="Debbie_img" width="1300" height="108">
 </header>
 
 <!-- Page content max-width:1564px -->
 <div class="w3-content w3-padding" style="max-width:1300px">
 
   <!-- About Section -->
-  <div class="w3-container w3-padding-32 w3-light-grey" id="about">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
+  <div class="w3-container w3-padding-32" id="about">
+    <h3 class="w3-border-bottom w3-padding-16">About</h3>
     <p>The Database of Experimental Biomaterials and their Biological Effect
         (DEBBIE) is a new open access tool which will enable a more efficient
         and evidence-based selection of materials for medical applications. The
@@ -45,7 +47,7 @@
   </div>
 
     <!-- Database Section -->
-  <div class="w3-container w3-padding-32" id="database">
+  <div class="w3-container w3-padding-32 w3-light-grey" id="database">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Database</h3>
     <p>The Database of Experimental Biomaterials and their Biological Effect
         (DEBBIE) is a new open access tool which will enable a more efficient
@@ -59,7 +61,7 @@
   </div>
 
   <!-- Ontology Section -->
-  <div class="w3-container w3-padding-32 w3-light-grey" id="ontology">
+  <div class="w3-container w3-padding-32" id="ontology">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Ontology</h3>
     <p> <a href="https://bioportal.bioontology.org/ontologies/DEB">The Devices, Experimental scaffolds and Biomaterials Ontology (DEB)</a> was
     developed to facilitate information curation in the area of medical
@@ -74,14 +76,14 @@
         <br>
         <div class="w3-row-padding">
           <div class="w3-col l6 m6 w3-margin-bottom">
-            <div class="w3-display-container">
-              <img src="static_ontology.png" alt="House" style="width:150">
+            <div class="w3-display-container w3-border-light-grey">
+              <img src="static_ontology.png" alt="House" style="width:500px">
               <center><p>Static Visualization on <a href="http://owlgred.lumii.lv/online_visualization/7l16">OWLGrEd</a></p></center>
             </div>
           </div>
           <div class="w3-col l6 m6 w3-margin-bottom">
             <div class="w3-display-container">
-              <img src="dynamic_visual.png" alt="House" style="width:150">
+              <img src="dynamic_visualization.png" alt="House" style="width:600px">
               <center><p>Dynamic Visualization on <a href="http://visualdataweb.de/webvowl/#iri=https://raw.githubusercontent.com/ProjectDebbie/Ontology_DEB/20191001/DEB_20191001.owl">WebVOWL</a></p></center>
             </div>
           </div>
@@ -90,9 +92,9 @@
   </div>
 
 <!-- Team Section -->
-  <div class="w3-container w3-padding-32" id="team">
+  <div class="w3-container w3-padding-32 w3-light-grey" id="team">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Team</h3>
-  <div class="w3-row-padding w3-grayscale">
+  <div class="w3-row-padding">
     <div class="w3-col l3 m3 w3-margin-bottom">
       <img src="osnat_hakimi.jpg" alt="Osnat" style="width:100%">
       <h3>Osnat Hakimi</h3>
@@ -108,14 +110,14 @@
       <p><button class="w3-button w3-blue w3-block">Contact</button></p>
     </div>
     <div class="w3-col l3 m3 w3-margin-bottom">
-      <img src="C Fuenteslopez (1).jpg" alt="carla" style="width:100%">
+      <img src="C Fuenteslopez (1).jpg" alt="carla" style="width:97%">
       <h3>Carla</h3>
       <p class="w3-opacity">Collaborator</p>
       <p>blurb</p>
       <p><button class="w3-button w3-blue w3-block">Contact</button></p>
     </div>
     <div class="w3-col l3 m3 w3-margin-bottom">
-      <img src="javi.jpeg" alt="javi" style="width:100%">
+      <img src="javi.jpeg" alt="javi" style="width:96%">
       <h3>Javier Corvi</h3>
       <p class="w3-opacity">Collaborator</p>
       <p>blurb</p>
@@ -130,8 +132,18 @@
 
 
 <!-- Footer -->
-<footer class="w3-center w3-black w3-padding-16">
+<footer class="w3-container w3-padding-16 w3-white">
+  <div class="w3-row-padding w3-col m4 w3-right">
+    <img src="bsc.png" alt="marie" style="width:70%">
+  </div>
 
+    <div class="w3-row-padding w3-col m4">
+      <center><img src="marie_curie.png" alt="marie" style="width:30%"></center>
+    </div>
+
+    <div class="w3-row-padding w3-col m4 w3-left">
+      <img src="upc.png" alt="upc" style="width:70%">
+    </div>
 </footer>
 
 </body>
