--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <!-- Header -->
 <br>
 <br>
-<header class="w3-display-container w3-content w3-wide w3-center" style="max-width:1250px;" id="home">
+<header class="w3-display-container w3-content w3-wide w3-center" style="max-width:1100px;" id="home">
   <img class="w3-image w3-center" src="debbie_small.png" alt="Debbie_img" width="1300" height="108">
 </header>
 
@@ -74,16 +74,16 @@
         <br>
         <p>In addition, below you can find the static and dynamic visualization of the ontology.</p>
         <br>
-        <div class="w3-row-padding">
-          <div class="w3-col l6 m6 w3-margin-bottom">
-            <div class="w3-display-container w3-border-light-grey">
-              <img src="static_ontology.png" alt="House" style="width:500px">
+        <div class="w3-row-padding w3-light-grey">
+          <div class="w3-col l6 m6 w3-margin-bottom w3-margin-top">
+            <div class="w3-display-container">
+              <img src="static_ontology.png" alt="static" style="width:500px">
               <center><p>Static Visualization on <a href="http://owlgred.lumii.lv/online_visualization/7l16">OWLGrEd</a></p></center>
             </div>
           </div>
-          <div class="w3-col l6 m6 w3-margin-bottom">
+          <div class="w3-col l6 m6 w3-margin-bottom w3-margin-top">
             <div class="w3-display-container">
-              <img src="dynamic_visualization.png" alt="House" style="width:600px">
+              <img src="dynamic_visualization.png" alt="dynamic" style="width:600px">
               <center><p>Dynamic Visualization on <a href="http://visualdataweb.de/webvowl/#iri=https://raw.githubusercontent.com/ProjectDebbie/Ontology_DEB/20191001/DEB_20191001.owl">WebVOWL</a></p></center>
             </div>
           </div>
