edits and database page

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </div>
           <div class="w3-col l6 m6 w3-margin-bottom w3-margin-top">
             <div class="w3-display-container">
-              <img src="dynamic_visualization.png" alt="dynamic" style="width:600px">
+              <img src="dynamic_visualization.png" alt="dynamic" style="width:600px; filter:brightness(110%);">
               <center><p>Dynamic Visualization on <a href="http://visualdataweb.de/webvowl/#iri=https://raw.githubusercontent.com/ProjectDebbie/Ontology_DEB/20191001/DEB_20191001.owl">WebVOWL</a></p></center>
             </div>
           </div>
