--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         update reviews of the literature in a more rapid and repeatable manner
         as well as generate a comprehensive map of research activity and findings.
     </p>
-    <center><p><button class="w3-button w3-blue">DEBBIE Database</button></p></center>
+    <center><p><a href="homepage_test.html" class="w3-button w3-blue">DEBBIE Database</a></p></center>
   </div>
 
   <!-- Ontology Section -->
