--- a/index.html
+++ b/index.html
@@ -113,14 +113,14 @@
       <img src="C Fuenteslopez (1).jpg" alt="carla" style="width:97%">
       <h3>Carla</h3>
       <p class="w3-opacity">Collaborator</p>
-      <p>blurb</p>
+      <p>Carla is a ___ Student studying ____ at Oxford University.</p>
       <p><button class="w3-button w3-blue w3-block">Contact</button></p>
     </div>
     <div class="w3-col l3 m3 w3-margin-bottom">
       <img src="javi.jpeg" alt="javi" style="width:96%">
       <h3>Javier Corvi</h3>
       <p class="w3-opacity">Collaborator</p>
-      <p>blurb</p>
+      <p>Javi is a Research Engineer at the Barcelona Supercomputing Center specializing in ____</p>
       <p><button class="w3-button w3-blue w3-block">Contact</button></p>
     </div>
   </div>
