--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <img src="osnat_hakimi.jpg" alt="Osnat" style="width:100%">
       <h3>Osnat Hakimi</h3>
       <p class="w3-opacity">Project Leader</p>
-      <p>Osnat is a Marie Curie Individual Fellow at the Universitat Politècnica de Catalunya and a visitor to the Barcelona super computing Centre</p>
+      <p>Osnat is a Marie Curie Individual Fellow at the Universitat Politècnica de Catalunya and a visitor to the Barcelona Supercomputing Center</p>
       <p><button class="w3-button w3-blue w3-block">Contact</button></p>
     </div>
     <div class="w3-col l3 m3 w3-margin-bottom">
