--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         update reviews of the literature in a more rapid and repeatable manner
         as well as generate a comprehensive map of research activity and findings.
     </p>
-    <button class="w3-button w3-blue><a href="hompage_test.html">DEBBIE Database</a></button>
+    <center><button><a href="hompage_test.html">DEBBIE Database</a></button></center>
   </div>
 
   <!-- Ontology Section -->
