edits to images

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <br>
 <br>
 <header class="w3-display-container w3-content w3-wide w3-center" style="max-width:1100px;" id="home">
-  <img class="w3-image w3-center" src="debbie_small.png" alt="Debbie_img" width="1300" height="108">
+  <img class="w3-image w3-center" src="images/debbie_small.png" alt="Debbie_img" width="1300" height="108">
 </header>
 
 <!-- Page content max-width:1564px -->
@@ -43,7 +43,7 @@
         as well as generate a comprehensive map of research activity and findings.
     </p>
     <br>
-    <center><img class="w3-image w3-center w3-padding-16" src="project_pipeline.png" alt="Pipeline" width="900" height="300"></center>
+    <center><img class="w3-image w3-center w3-padding-16" src="images/project_pipeline.png" alt="Pipeline" width="900" height="300"></center>
   </div>
 
     <!-- Database Section -->
@@ -78,13 +78,13 @@
         <div class="w3-row-padding w3-light-grey">
           <div class="w3-col l6 m6 w3-margin-bottom w3-margin-top">
             <div class="w3-display-container">
-              <img src="static_ontology.png" alt="static" style="width:500px">
+              <img src="images/static_ontology.png" alt="static" style="width:500px">
               <center><p>Static Visualization on <a href="http://owlgred.lumii.lv/online_visualization/pbqt">OWLGrEd</a></p></center>
             </div>
           </div>
           <div class="w3-col l6 m6 w3-margin-bottom w3-margin-top">
             <div class="w3-display-container">
-              <img src="dynamic_visualization.png" alt="dynamic" style="width:600px; filter:brightness(110%);">
+              <img src="images/dynamic_visualization.png" alt="dynamic" style="width:600px; filter:brightness(110%);">
               <center><p>Dynamic Visualization on <a href="http://visualdataweb.de/webvowl/#iri=https://raw.githubusercontent.com/ProjectDebbie/Ontology_DEB/20191001/DEB_20191001.owl">WebVOWL</a></p></center>
             </div>
           </div>
@@ -97,28 +97,28 @@
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Team</h3>
   <div class="w3-row-padding">
     <div class="w3-col l3 m3 w3-margin-bottom">
-      <img src="osnat_hakimi.jpg" alt="Osnat" style="width:100%">
+      <img src="images/osnat_hakimi.jpg" alt="Osnat" style="width:100%">
       <h3>Osnat Hakimi</h3>
       <p class="w3-opacity">Project Leader</p>
       <p>Osnat is a Marie Curie Individual Fellow at the Universitat Politècnica de Catalunya and a visitor to the Barcelona Supercomputing Center</p>
       <p><button class="w3-button w3-blue w3-block">Contact</button></p>
     </div>
     <div class="w3-col l3 m3 w3-margin-bottom">
-      <img src="austin.jpg" alt="austin" style="width:100%">
+      <img src="images/austin.jpg" alt="austin" style="width:100%">
       <h3>Austin McKitrick</h3>
       <p class="w3-opacity">Research Assistant</p>
       <p>Austin is a Masters Student in Bioinformatics for Health Sciences at Universitat Pompeu Fabra (UPF) in Barcelona.</p>
       <p><button class="w3-button w3-blue w3-block">Contact</button></p>
     </div>
     <div class="w3-col l3 m3 w3-margin-bottom">
-      <img src="C Fuenteslopez (1).jpg" alt="carla" style="width:97%">
+      <img src="images/C Fuenteslopez (1).jpg" alt="carla" style="width:97%">
       <h3>Carla</h3>
       <p class="w3-opacity">Collaborator</p>
       <p>Carla is a ___ Student studying ____ at Oxford University.</p>
       <p><button class="w3-button w3-blue w3-block">Contact</button></p>
     </div>
     <div class="w3-col l3 m3 w3-margin-bottom">
-      <img src="javi.jpeg" alt="javi" style="width:96%">
+      <img src="images/javi.jpeg" alt="javi" style="width:96%">
       <h3>Javier Corvi</h3>
       <p class="w3-opacity">Collaborator</p>
       <p>Javi is a Research Engineer at the Barcelona Supercomputing Center specializing in ____</p>
@@ -135,15 +135,15 @@
 <!-- Footer -->
 <footer class="w3-container w3-padding-16 w3-white">
   <div class="w3-row-padding w3-col m4 w3-right">
-    <img src="bsc.png" alt="marie" style="width:70%">
+    <img src="images/bsc.png" alt="marie" style="width:70%">
   </div>
 
     <div class="w3-row-padding w3-col m4">
-      <center><img src="marie_curie.png" alt="marie" style="width:30%"></center>
+      <center><img src="images/marie_curie.png" alt="marie" style="width:30%"></center>
     </div>
 
     <div class="w3-row-padding w3-col m4 w3-left">
-      <img src="upc.png" alt="upc" style="width:70%">
+      <img src="images/upc.png" alt="upc" style="width:70%">
     </div>
 </footer>
 
