--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         as well as generate a comprehensive map of research activity and findings.
     </p>
     <center><button style="background-color:#3995F9;font-size:20px;color:white; padding: 10px 32px;
-  text-align: center;"><a href="hompage_test.html">DEBBIE Database</a></button></center>
+  text-align: center;"><a href="under_construction.html">DEBBIE Database</a></button></center>
   </div>
 
   <!-- Ontology Section -->
