--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
         <div class="w3-row-padding w3-light-grey">
           <div class="w3-col l6 m6 w3-margin-bottom w3-margin-top">
             <div class="w3-display-container">
-              <img src="images/static_ontology.png" alt="static" style="width:500px">
+              <img src="images/static_ontology.png" alt="static" style="width:500px;padding-left:15px;padding-top: 15px">
               <center><p>Static Visualization on <a href="http://owlgred.lumii.lv/online_visualization/pbqt">OWLGrEd</a></p></center>
             </div>
           </div>
           <div class="w3-col l6 m6 w3-margin-bottom w3-margin-top">
             <div class="w3-display-container">
-              <img src="images/dynamic_visualization.png" alt="dynamic" style="width:600px; filter:brightness(110%);">
+              <img src="images/dynamic_visualization.png" alt="dynamic" style="width:600px; filter:brightness(110%);padding-right:15px;padding-top: 15px">
               <center><p>Dynamic Visualization on <a href="http://visualdataweb.de/webvowl/#iri=https://raw.githubusercontent.com/ProjectDebbie/Ontology_DEB/20191001/DEB_20191001.owl">WebVOWL</a></p></center>
             </div>
           </div>
