--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         as well as generate a comprehensive map of research activity and findings.
     </p>
     <br>
-    <center><img class="w3-image w3-center w3-padding-16" src="images/project_pipeline.png" alt="Pipeline" width="900" height="300"></center>
+    <center><img class="w3-image w3-center w3-padding-16" src="images/Biocuration_pipeline_20200123.png" alt="Pipeline" width="900" height="300"></center>
   </div>
 
     <!-- Database Section -->
