--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <br>
 <br>
 <header class="w3-display-container w3-content w3-wide w3-center" style="max-width:1100px;" id="home">
-  <img class="w3-image w3-center" src="images/debbie_small.png" alt="Debbie_img" width="1300" height="108">
+  <img class="w3-image w3-center" src="images/DEBBIE_banner.png" alt="Debbie_img" width="1300">
 </header>
 
 <!-- Page content max-width:1564px -->
