under constrcuction page

--- a/under_construction.html
+++ b/under_construction.html
@@ -34,10 +34,18 @@
       }
       </style>
   </head>
+
+<!-- Navbar (sit on top) -->
+<div class="w3-top">
+  <div class="w3-bar w3-white w3-wide w3-padding w3-card">
+    <a href="index.html" class="w3-bar-item w3-button"><b>DEBBIE</b></a>
+  </div>
+</div>
 <!-- jumbotron -->
   <div class='container'>
     <div class="jumbotron text-center">
         <h2>DEBBIE Search</h2>
+        <h4>The Database of Experimental Biomaterials and their Biological Effect</h4>
     </div>
   </div>
 <!-- Search box, buttons, text -->
