--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-    <a href="#home" class="w3-bar-item w3-button"><b>DEBBIE</b></a>
+    <img src="images/flyer.png" width="40" height="40"></a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
       <a href="#about" class="w3-bar-item w3-button">About</a>
@@ -20,11 +20,11 @@
     </div>
   </div>
 </div>
-
+<br>
 <!-- Header -->
 <br>
 <br>
-<header class="w3-display-container w3-content w3-wide w3-center" style="max-width:1100px;" id="home">
+<header class="w3-display-container w3-content w3-wide w3-center" style="max-width:1245px;" id="home">
   <img class="w3-image w3-center" src="images/DEBBIE_banner.png" alt="Debbie_img" width="1500">
 </header>
 
@@ -92,6 +92,29 @@
     </p>
   </div>
 
+<!-- Research Section -->
+<div class="w3-container w3-padding-32" id="research">
+    <h3 class="w3-border-bottom w3-padding-16">Research</h3>
+    <div class="w3-row-padding">
+      <div class="w3-col l3 m3 w3-margin-bottom">
+        <a href="https://towardsdatascience.com/could-data-analysis-prevent-unnecessary-suffering-lessons-to-learn-from-the-vaginal-mesh-scandal-793086d6bbcc"><img src="images/osnat_medium_article1.png" alt="osnat_medium_article1" style="width:60%"></a>
+        <p><a href="https://towardsdatascience.com/could-data-analysis-prevent-unnecessary-suffering-lessons-to-learn-from-the-vaginal-mesh-scandal-793086d6bbcc">Could data analysis prevent unnecessary suffering?</a></p>
+      </div>
+    </div>
+    <div class="w3-row-padding">
+      <div class="w3-col l3 m3 w3-margin-bottom">
+      </div>
+    </div>
+    <div class="w3-row-padding">
+      <div class="w3-col l3 m3 w3-margin-bottom">
+      </div>
+    </div>
+    <div class="w3-row-padding">
+      <div class="w3-col l3 m3 w3-margin-bottom">
+      </div>
+    </div>
+</div>
+
 <!-- Team Section -->
   <div class="w3-container w3-padding-32 w3-light-grey" id="team">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Team</h3>
@@ -101,28 +124,29 @@
       <h3>Osnat Hakimi</h3>
       <p class="w3-opacity">Project Leader</p>
       <p>Osnat is a Marie Curie Individual Fellow at the Universitat Politècnica de Catalunya and a visitor to the Barcelona Supercomputing Center</p>
-      <p><button class="w3-button w3-blue w3-block">Contact</button></p>
+      <!--<p><button class="w3-button w3-blue w3-block">Contact</button></p> -->
+      <p class="w3-opacity">osnat.hakimi@bsc.es osnat.hakimi@upc.edu</p>
     </div>
     <div class="w3-col l3 m3 w3-margin-bottom">
       <img src="images/austin.jpg" alt="austin" style="width:100%">
       <h3>Austin McKitrick</h3>
       <p class="w3-opacity">Research Assistant</p>
       <p>Austin is a Masters Student in Bioinformatics for Health Sciences at Universitat Pompeu Fabra (UPF) in Barcelona.</p>
-      <p><button class="w3-button w3-blue w3-block">Contact</button></p>
+      <p class="w3-opacity">amckitri@bsc.es austin.mckitrick01@estudiant.upf.edu</p>
     </div>
     <div class="w3-col l3 m3 w3-margin-bottom">
       <img src="images/C Fuenteslopez (1).jpg" alt="carla" style="width:97%">
       <h3>Carla</h3>
       <p class="w3-opacity">Collaborator</p>
       <p>Carla is a ___ Student studying ____ at Oxford University.</p>
-      <p><button class="w3-button w3-blue w3-block">Contact</button></p>
+      <p class="w3-opacity">carla.fuentes.lopez@gmail.com</p>
     </div>
     <div class="w3-col l3 m3 w3-margin-bottom">
       <img src="images/javi.jpeg" alt="javi" style="width:96%">
       <h3>Javier Corvi</h3>
       <p class="w3-opacity">Collaborator</p>
       <p>Javi is a Research Engineer at the Barcelona Supercomputing Center specializing in ____</p>
-      <p><button class="w3-button w3-blue w3-block">Contact</button></p>
+      <p class="w3-opacity">javier.corvi@bsc.es</p>
     </div>
   </div>
 </div>
