--- a/under_construction.html
+++ b/under_construction.html
@@ -38,9 +38,10 @@
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-    <a href="index.html" class="w3-bar-item w3-button"><b>DEBBIE</b></a>
+    <a href="index.html"><img src="images/flyer.png" width="40" height="40"></a>
   </div>
 </div>
+<br>
 <!-- jumbotron -->
   <div class='container'>
     <div class="jumbotron text-center">
