--- a/index.html
+++ b/index.html
@@ -9,19 +9,20 @@
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-    <img src="images/flyer.png" width="40" height="40"></a>
+    <img src="images/flyer.png" width="60" height="60"></a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
-      <a href="#about" class="w3-bar-item w3-button">About</a>
-      <a href="#database" class="w3-bar-item w3-button">Database</a>
-      <a href="#ontology" class="w3-bar-item w3-button">Ontology</a>
-      <a href="#research" class="w3-bar-item w3-button">Research</a>
-      <a href="#team" class="w3-bar-item w3-button">Team</a>
+      <a href="#about" class="w3-bar-item w3-button w3-padding-16">About</a>
+      <a href="#database" class="w3-bar-item w3-button w3-padding-16">Database</a>
+      <a href="#ontology" class="w3-bar-item w3-button w3-padding-16">Ontology</a>
+      <a href="#research" class="w3-bar-item w3-button w3-padding-16">Research</a>
+      <a href="#team" class="w3-bar-item w3-button w3-padding-16">Team</a>
     </div>
   </div>
 </div>
 <br>
 <!-- Header -->
+<br>
 <br>
 <br>
 <header class="w3-display-container w3-content w3-wide w3-center" style="max-width:1245px;" id="home">
@@ -138,7 +139,7 @@
       <img src="images/C Fuenteslopez (1).jpg" alt="carla" style="width:97%">
       <h3>Carla</h3>
       <p class="w3-opacity">Collaborator</p>
-      <p>Carla is a ___ Student studying ____ at Oxford University.</p>
+      <p>Carla is a DPhil Student studying Engineering Science, with a focus in nanomedicine and tissue engineering, at the University of Oxford.</p>
       <p class="w3-opacity">carla.fuentes.lopez@gmail.com</p>
     </div>
     <div class="w3-col l3 m3 w3-margin-bottom">
