--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     </div>
     <div class="w3-col l3 m3 w3-margin-bottom">
       <img src="images/C Fuenteslopez (1).jpg" alt="carla" style="width:97%">
-      <h3>Carla</h3>
+      <h3>Carla V. Fuenteslópez</h3>
       <p class="w3-opacity">Collaborator</p>
       <p>Carla is a DPhil Student studying Engineering Science, with a focus in nanomedicine and tissue engineering, at the University of Oxford.</p>
       <p class="w3-opacity">carla.fuentes.lopez@gmail.com</p>
