--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <h3>Carla V. Fuenteslópez</h3>
       <p class="w3-opacity">Collaborator</p>
       <p>Carla is a DPhil Student studying Engineering Science, with a focus in nanomedicine and tissue engineering, at the University of Oxford.</p>
-      <p class="w3-opacity">carla.fuentes.lopez@gmail.com</p>
+      <p class="w3-opacity">carla.fuenteslopez@eng.ox.ac.uk</p>
     </div>
     <div class="w3-col l3 m3 w3-margin-bottom">
       <img src="images/javi.jpeg" alt="javi" style="width:96%">
