changes to database section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<style>
+        ul {
+          flex-wrap: wrap;
+          display: flex;
+          font-family: Tahoma, Geneva, sans-serif;
+        }
+        ul li {
+          flex: 1 0 25%;
+          font-family: Tahoma, Geneva, sans-serif;
+        }
+</style>
 <body>
 
 <!-- Navbar (sit on top) -->
@@ -58,6 +69,24 @@
         update reviews of the literature in a more rapid and repeatable manner
         as well as generate a comprehensive map of research activity and findings.
     </p>
+      <p>The DEBBIE Database contains annotations from over 200 PubMed Abstracts related to the field of Biomaterials. Each annotation is labelled by one or more of the following categories:</p>
+          <ul class="list">
+          <li>Biomaterial</li>
+          <li>Structure</li>
+          <li>Application</li>
+          <li>Manufactured Object</li>
+
+          <li>Manufactured Object Features</li>
+          <li>Bioactive Substance</li>
+          <li>Tissue</li>
+          <li>Medical Application</li>
+
+          <li>Cell</li>
+          <li>Effect on Biological System</li>
+          <li>Associated Biological Process</li>
+          <li>Research Technique</li>
+        </ul>
+    <br>
     <center><button style="background-color:#3995F9;font-size:20px;color:white; padding: 10px 32px;
   text-align: center;"><a href="under_construction.html">DEBBIE Database</a></button></center>
   </div>
@@ -146,7 +175,7 @@
       <img src="images/javi.jpeg" alt="javi" style="width:96%">
       <h3>Javier Corvi</h3>
       <p class="w3-opacity">Collaborator</p>
-      <p>Javi is a Research Engineer at the Barcelona Supercomputing Center specializing in ____</p>
+      <p>Javi is a Research Engineer at the Barcelona Supercomputing Center.</p>
       <p class="w3-opacity">javier.corvi@bsc.es</p>
     </div>
   </div>
