--- a/index.html
+++ b/index.html
@@ -158,28 +158,28 @@
       <p class="w3-opacity">Project Leader</p>
       <p>Osnat is a Marie Curie Individual Fellow at the Universitat Politècnica de Catalunya and a visitor to the Barcelona Supercomputing Center</p>
       <!--<p><button class="w3-button w3-blue w3-block">Contact</button></p> -->
-      <p class="w3-opacity">osnat.hakimi@bsc.es osnat.hakimi@upc.edu</p>
+      <p class="w3-opacity">o</p>
     </div>
     <div class="w3-col l3 m3 w3-margin-bottom">
       <img src="images/austin.jpg" alt="austin" style="width:100%">
       <h3>Austin McKitrick</h3>
       <p class="w3-opacity">Research Assistant</p>
       <p>Austin is a Masters Student in Bioinformatics for Health Sciences at Universitat Pompeu Fabra (UPF) in Barcelona.</p>
-      <p class="w3-opacity">amckitri@bsc.es austin.mckitrick01@estudiant.upf.edu</p>
+      <p class="w3-opacity"></p>
     </div>
     <div class="w3-col l3 m3 w3-margin-bottom">
       <img src="images/C Fuenteslopez (1).jpg" alt="carla" style="width:97%">
       <h3>Carla V. Fuenteslópez</h3>
       <p class="w3-opacity">Collaborator</p>
       <p>Carla is a DPhil Student studying Engineering Science, with a focus in nanomedicine and tissue engineering, at the University of Oxford.</p>
-      <p class="w3-opacity">carla.fuenteslopez@eng.ox.ac.uk</p>
+      <p class="w3-opacity"></p>
     </div>
     <div class="w3-col l3 m3 w3-margin-bottom">
       <img src="images/javi.jpeg" alt="javi" style="width:96%">
       <h3>Javier Corvi</h3>
       <p class="w3-opacity">Collaborator</p>
       <p>Javi is a Research Engineer at the Barcelona Supercomputing Center.</p>
-      <p class="w3-opacity">javier.corvi@bsc.es</p>
+      <p class="w3-opacity"></p>
     </div>
   </div>
 </div>
